Feat/modification dune traduction existante dun monstre (#179)
* ✨ Feat/ajout d'un DTO pour la mise à jour de la traduction d'un monstre

* ✨ Feat(translations): Enhance monster translation update functionality with partial updates for textual fields

* ✅ Test(translations): Restrict modifiable fields during monster translation updates

* 📝 Docs(translations): Update monster translation DTOs and examples for improved clarity and accuracy
